# dev-tools

./: .gitignore  LICENSE  README.md
devenv/l1-base/: extensions.base.txt  flake.nix
devenv/l2-envs/node/: extensions.node.txt  flake.nix
devenv/l3-example/: extensions.project.txt  flake.nix
git-ranger/: Cargo.toml  build.rs  rustfmt.toml
git-ranger/asset/: dictionary.yaml
git-ranger/src/: main.rs
git-ranger/src/commands/: check.rs  list.rs  mod.rs  plant.rs  prune.rs  seed.rs  visit.rs
ts/: biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
