[package]
name = "git-ranger"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive"] }
url = "2.5.7"

[build-dependencies]
const_format = { version = "0.2.34", features = ["fmt"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
